force-app/main/default/objects/Form_Log_Entry__c/Form_Log_Entry__c.object-meta.xml
<CustomObject>
    <description>Log entries created in Communities pages to track selected events at the site like Save and Submit.</description>
    <label>Form Log Entry</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Form Log Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>