force-app/main/default/objects/Form_Log_Entry__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advisor (if any) to which this form log entry is linked</description>
    <inlineHelpText>The advisor (if any) to which this form log entry is linked</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>Advisor__c</referenceTo>
    <relationshipLabel>Form Log Entries</relationshipLabel>
    <relationshipName>Form_Log_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>