force-app/main/default/objects/Form_Log_Entry__c/fields/Country_code__c.field-meta.xml
<CustomField>
    <fullName>Country_code__c</fullName>
    <description>The code of the country logged in at the time of this entry</description>
    <inlineHelpText>The code of the country logged in at the time of this entry</inlineHelpText>
    <label>Country code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>