force-app/main/default/objects/Form_Log_Entry__c/fields/Country_name__c.field-meta.xml
<CustomField>
    <fullName>Country_name__c</fullName>
    <description>The name of the country logged in at the time of this entry</description>
    <inlineHelpText>The name of the country logged in at the time of this entry</inlineHelpText>
    <label>Country name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>