force-app/main/default/objects/Form_Log_Entry__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The form (if any) with which this log entry is associated</description>
    <inlineHelpText>The form (if any) with which this log entry is associated</inlineHelpText>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Form Log Entries</relationshipLabel>
    <relationshipName>Form_Log_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>