force-app/main/default/objects/Form_Log_Entry__c/fields/Form_Instance__c.field-meta.xml
<CustomField>
    <fullName>Form_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The active form instance (if any) at the time of this entry</description>
    <inlineHelpText>The active form instance (if any) at the time of this entry</inlineHelpText>
    <label>Form Instance</label>
    <referenceTo>Form_Instance__c</referenceTo>
    <relationshipLabel>Form Log Entries</relationshipLabel>
    <relationshipName>Form_Log_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>