force-app/main/default/objects/Form_Log_Entry__c/fields/Form_name__c.field-meta.xml
<CustomField>
    <fullName>Form_name__c</fullName>
    <description>Name of the form with which this log entry is associated</description>
    <formula>Form__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the form with which this log entry is associated</inlineHelpText>
    <label>Form name</label>
    <type>Text</type>
</CustomField>