force-app/main/default/objects/Form_Log_Entry__c/fields/IP__c.field-meta.xml
<CustomField>
    <fullName>IP__c</fullName>
    <description>IP number logged in at the time of this log entry</description>
    <inlineHelpText>IP number logged in at the time of this log entry</inlineHelpText>
    <label>IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>