force-app/main/default/objects/Form_Log_Entry__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>The language used at the time this log entry was made</description>
    <inlineHelpText>The language used at the time this log entry was made</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>The language at the time this record was last saved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>