force-app/main/default/objects/Form_Log_Entry__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any further details describing this log entry</description>
    <inlineHelpText>Any further details describing this log entry</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>