force-app/main/default/objects/Form_Log_Entry__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>The operation being performed, e.g. Save, Submit, GoHome, etc.</description>
    <inlineHelpText>The operation being performed, e.g. Save, Submit, GoHome, etc.</inlineHelpText>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>