force-app/main/default/objects/Form_Log_Entry__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The active profile (if any) at the time of this entry</description>
    <inlineHelpText>The active profile (if any) at the time of this entry</inlineHelpText>
    <label>Profile</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>Form Log Entries</relationshipLabel>
    <relationshipName>Form_Log_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>