force-app/main/default/objects/Form_Log_Entry__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The active proposal (if any) at the time of this entry</description>
    <inlineHelpText>The active proposal (if any) at the time of this entry</inlineHelpText>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Form Log Entries</relationshipLabel>
    <relationshipName>Form_Log_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>