force-app/main/default/objects/Form_Log_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country_name__c</columns>
    <columns>Language__c</columns>
    <columns>Form_name__c</columns>
    <columns>Operation__c</columns>
    <columns>Notes__c</columns>
    <columns>Form_Instance__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>